[zetasql-toolkit] Add TVF and Procedure support to BigQueryAPIResourceProvider